work on limiting use of :demand t

--- a/emacs.org
+++ b/emacs.org
@@ -1091,7 +1091,6 @@ For example, you can type =C-h= and it will show available completions.
 
 (use-package which-key
   :custom (which-key-idle-delay 1.5)
-  :demand t
   :diminish
   :commands which-key-mode
   :config (which-key-mode))
@@ -1105,19 +1104,15 @@ The nice thing about completion frameworks is that they support interactively na
 ;;; Completion
 ;; https://github.com/minad/vertico
 (use-package vertico
-  :demand t
-  :init
-  (vertico-mode))
+  :hook (after-init . vertico-mode))
 
 ;; https://github.com/oantolin/orderless
 (use-package orderless
-  :demand t
   :custom
   (completion-styles '(orderless basic)))
 
 ;; https://github.com/minad/consult
 (use-package consult
-  :demand t
   :bind
   ;; M-g go-to map
   (("M-g g" . consult-goto-line)
@@ -1144,13 +1139,12 @@ The nice thing about completion frameworks is that they support interactively na
 
 ;; https://github.com/minad/marginalia
 (use-package marginalia
-  :demand t
   :bind (:map minibuffer-local-map
               ("C-M-a" . marginalia-cycle))
   :custom
   (marginalia-annotators '(marginalia-annotators-heavy marginalia-annotators-light nil))
-  :config
-  (marginalia-mode))
+  :hook (after-init . vertico-mode))
+
 #+end_src
 *** Completion at point
 [[https://github.com/minad/corfu][Corfu]] (COmpletion in Region FUnction) is an in-buffer completion with a small
@@ -1246,7 +1240,6 @@ backend to perform a search.  This can be invoked with =M-.=.
 
 #+begin_src emacs-lisp
 (use-package dumb-jump
-  :demand t
   :commands (xref-find-definitions)
   :config
   (add-hook 'xref-backend-functions #'dumb-jump-xref-activate)
@@ -1261,8 +1254,7 @@ backend to perform a search.  This can be invoked with =M-.=.
 #+begin_src emacs-lisp
 (use-package avy
   :bind ("C-;" . avy-goto-char-timer)
-  :custom
-  (avy-case-fold-search t)
+  :custom (avy-case-fold-search t)
   :functions (avy-setup-default)
   :config (avy-setup-default))
 #+end_src
