--- a/emacs.org
+++ b/emacs.org
@@ -956,21 +956,41 @@ This section configures those pieces of Emacs where I can affect how I interact 
 :header-args:emacs-lisp: :tangle lisp/init-ui.el
 :END:
 *** Personal keymap
-This is my personal keymap that then hooks into different commands, hydras, or other pieces.
+This is my personal keymap, aka a Leader key, that then hooks into different commands, hydras, or other pieces.
 
 #+begin_src emacs-lisp
 
-(define-prefix-command 'forge-mkhome-map)
-(define-key forge-mkhome-map (kbd "g") 'forge-mkhome-update)
-(define-key forge-mkhome-map (kbd "w") 'forge-mkhome-www)
-(define-key forge-mkhome-map (kbd "s") 'forge-mkhome-src)
+(defvar-keymap my-mkhome-map
+  :doc "Prefix map for mkhome targets"
+  "g" #'forge-mkhome-update
+  "w" #'forge-mkhome-www
+  "s" #'forge-mkhome-src)
+
+(defvar-keymap my-jump-map
+  :doc "Prefix map for jumping"
+  "j" #'avy-goto-char-timer
+  "i" #'imenu
+  "d" #'dired-jump
+  "m" #'consult-bookmark
+  "b" #'my-org-web-bookmarks)
+
+(defvar-keymap my-window-map
+  :doc "Prefix map for managing windows and buffers"
+  :name "Windows"
+  "a" #'ace-window
+  "t" #'transpose-frame
+  "o" #'ace-delete-other-windows
+  "s" #'ace-swap-window
+  "d" #'ace-delete-window
+  "b" #'consult-buffer
+  "g" #'golden-ratio)
 
 (define-prefix-command 'forge-map)
 (define-key forge-map (kbd "w") 'forge/window/body)
 (define-key forge-map (kbd "m") 'notmuch-cycle-notmuch-buffers)
-(define-key forge-map (kbd "h") 'forge-mkhome-map)
+(define-key forge-map (kbd "h") my-mkhome-map)
 (define-key forge-map (kbd "f") 'elfeed)
-(define-key forge-map (kbd "j") 'forge/jabber-start-or-switch)
+(define-key forge-map (kbd "j") my-jump-map)
 (define-key forge-map (kbd "g") 'magit-status)
 (define-key forge-map (kbd "s") 'eshell-here)
 (define-key forge-map (kbd "S") 'forge/slack/body)
@@ -1081,7 +1101,7 @@ This is my personal keymap that then hooks into different commands, hydras, or o
 
 #+end_src
 
-*** Show key bindings
+*** ~which-key~ Show key bindings
 [[https://github.com/justbur/emacs-which-key][which-key]] will display key bindings following your currently entered incomplete command in a popup.
 For example, you can type =C-h= and it will show available completions.
 
@@ -1089,10 +1109,9 @@ For example, you can type =C-h= and it will show available completions.
 
 (use-package which-key
   :custom (which-key-idle-delay 1.5)
+  :demand t
   :diminish
-  :commands which-key-mode
   :config (which-key-mode))
-
 #+end_src
 *** Vertico, Orderless, & Consult
 The nice thing about completion frameworks is that they support interactively narrowing a set of results.  I typically look for something that, from my perspective, integrates well with Emacs.
