point to correct keymap for global prefix window map

--- a/emacs.org
+++ b/emacs.org
@@ -1003,7 +1003,7 @@ This is my personal keymap, aka a Leader key, that then hooks into different com
   "N" #'forge/mail-toggle-compose-new-frame)
 
 (define-prefix-command 'forge-map)
-(define-key forge-map (kbd "w") 'forge/window/body)
+(define-key forge-map (kbd "w") my-window-map)
 (define-key forge-map (kbd "m") my-mail-map)
 (define-key forge-map (kbd "h") my-mkhome-map)
 (define-key forge-map (kbd "f") 'elfeed)
