--- a/emacs.org
+++ b/emacs.org
@@ -3368,7 +3368,7 @@ Miscellaneous notes:
              :prepend t)
             ("rf" "Elfeed/News Article" entry
              (file+olp+datetree "articles.org")
-             "* %a %? :%(forge/elfeed-get-entry-tags):ARTICLE:\n:PROPERTIES:\n:CAPTURED:  %U\n:END:\n"
+             "* %a %? :%(forge/elfeed-get-entry-tags):ARTICLE:\n:PROPERTIES:\n:URL:  %(forge/elfeed-capture-entry-url)\n:CAPTURED:  %U\n:END:\n"
              :prepend t)
             ("rt" "Twitter Post" entry
              (file+olp+datetree "articles.org")
@@ -4040,6 +4040,22 @@ articles every 2 hours.
     (interactive)
     (elfeed--youtube-dl elfeed-show-entry))
 
+  (defun forge/elfeed-entry-url ()
+    "Copy the current entry link URL to the clipboard."
+    (interactive)
+    (let ((entry))
+      (if (eq major-mode 'elfeed-show-mode)
+          (setq entry elfeed-show-entry)
+        (setq entry (car (elfeed-search-selected))))
+      (elfeed-entry-link entry)))
+
+  (defun forge/elfeed-capture-entry-url ()
+    "Set up for org capture to grab elfeed entry url."
+    (interactive)
+    (if (get-buffer "*elfeed-entry*")
+        (with-current-buffer "*elfeed-entry*" (forge/elfeed-entry-url))
+      (with-current-buffer "*elfeed-search*" (forge/elfeed-entry-url))))
+
   (defun forge/elfeed-entry-tags ()
     "Return entry tags as a string."
     (interactive)
@@ -4050,10 +4066,11 @@ articles every 2 hours.
       (upcase (mapconcat #'symbol-name (elfeed-entry-tags entry) ":"))))
 
   (defun forge/elfeed-get-entry-tags ()
-    "hello"
+    "Set up for org capture to grab elfeed entry tags."
     (interactive)
-    (with-current-buffer "*elfeed-entry*"
-      (forge/elfeed-entry-tags)))
+    (if (get-buffer "*elfeed-entry*")
+        (with-current-buffer "*elfeed-entry*" (forge/elfeed-entry-tags))
+      (with-current-buffer "*elfeed-search*" (forge/elfeed-entry-tags))))
 
   (defun elfeed-show-open-eww ()
     "Open the current entry with eww."
