add keybindings for beancount

--- a/emacs.org
+++ b/emacs.org
@@ -2124,6 +2124,10 @@ the modes ([[https://github.com/ledger/ledger-mode][ledger]] and [[https://githu
 (use-package beancount
   :ensure nil
   :init (init-vc-install :fetcher "github" :repo "beancount/beancount-mode")
+  :bind
+  (("C-c C-n" . outline-next-visible-heading)
+   ("C-c C-p" . outline-previous-visible-heading)
+   ("C-c C-u" . outline-up-heading))
   :mode ("\\.beancount\\'" . beancount-mode)
   :hook (beancount-mode . outline-minor-mode))
 #+end_src
